--- a/data/events/2023-des-moines.yml
+++ b/data/events/2023-des-moines.yml
@@ -64,6 +64,7 @@ team_members: # Name is the only required field for team members.
     linkedin: "https://www.linkedin.com/in/amyvanwesten-lindberg"
     twitter: "LindbergAmy"
   - name: "Crystal Newcomb"
+    github: "CrystalNewcomb"
     linkedin: "https://www.linkedin.com/in/crystalnewcomb/"
   - name: "Bo Schatzberg"
     github: "BoSchatzberg"
